# optpath

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: README.md
examples/gaussian/: optpath_in.rb  path.xyz  qm.grad  qm.sng
examples/gaussian/excited/: optpath.yaml  qm.grad
examples/gaussian/ground/: optpath.yaml  qm.grad
examples/gaussian/qmmm/: optpath.yaml  qm.grad
examples/pyscf/excited/: optpath.yaml
examples/pyscf/ground/: optpath.yaml
examples/pyscf/qmmm/: mm_charges.xyzq  optpath.yaml  path.xyz
examples/qchem/: optpath_in.rb  path.xyz  qm.grad  qm.sng
examples/qchem/excited/: optpath.yaml  qm.grad
examples/qchem/ground/: optpath.yaml  qm.grad
examples/qchem/qmmm/: optpath.yaml  qm.grad
lib/: constants.rb  gaussian.rb  molecule.rb  path.rb  pathoptimizer.rb  qchem.rb  qmengine.rb
optpath/: __init__.py  cli.py
optpath/config/: loader.py  schema.py
optpath/core/: __init__.py  band.py  checkpoint.py  convergence.py  reparam.py  state_tracking.py  string_optimizer.py  tangent.py
optpath/engines/: __init__.py  base.py  gaussian.py  pyscf.py  qchem.py  results.py
optpath/io/: logs.py  templates.py  trajectory.py  xyz.py
optpath/qmmm/: __init__.py  point_charges.py  selection.py  vdw.py
optpath/utils/: alignment.py  constants.py  errors.py  filesystem.py  parallel.py  units.py  zmat_interp.py
tests/: test_alignment.py  test_cli.py  test_core.py  test_optimizer.py  test_parsers.py  test_qmmm.py  test_schema.py  test_vdw.py  test_zmat_interp.py
tests/fixtures/gaussian/: sample.out
(+2 files in other folders)
